Files.write via ContentWriter